--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,12 +34,12 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services:10.2.1'
     compile 'com.google.android.gms:play-services-auth:10.2.1'
-    compile 'pub.devrel:easypermissions:0.2.1'
+    /*compile 'pub.devrel:easypermissions:0.2.1'
     compile('com.google.api-client:google-api-client-android:1.22.0') {
         exclude group: 'org.apache.httpcomponents'
     }
     compile('com.google.apis:google-api-services-calendar:v3-rev249-1.22.0') {
         exclude group: 'org.apache.httpcomponents'
-    }
+    }*/
     //compile 'com.google.api:toolkit:0.0.5'
 }
